--- a/Ticket-Booking-Platform_Frontend-main/ticket_booking_platform_frontend/package.json
+++ b/Ticket-Booking-Platform_Frontend-main/ticket_booking_platform_frontend/package.json
@@ -12,19 +12,22 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
-
     "@hookform/resolvers": "^5.0.1",
-
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.4.0",
     "@tailwindcss/vite": "^4.0.9",
+    "@types/lodash": "^4.17.20",
+    "@types/react-select": "^5.0.0",
     "axios": "^1.8.4",
+    "framer-motion": "^12.23.3",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.477.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
+    "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "stripe": "^18.2.1",
@@ -33,14 +36,15 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.23.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "typescript": "^5.8.3",
     "vite": "^6.2.0"
   }
 }
